--- a/styles/poster.css
+++ b/styles/poster.css
@@ -36,6 +36,12 @@ header div h2 {
 }
 
 /* main */
+main section {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
 .off65 {
     text-align: center;
     margin-top: 120px 150px 0px 150px;
@@ -75,14 +81,13 @@ section div .oooo {
 .welcome {
     text-align: left;
     margin: 120px 140px 0px 140px;
-    background-image: url('../img/Vectorrr.png');
-    fill: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    background: linear-gradient(to right, #070211 0%, rgba(7, 2, 17, 0.2) 90%), url('../img/Vectorrr.png');
     background-repeat: no-repeat;
     background-size: auto;
     max-width: 1320px;
     max-height: 600px;
     border-radius: 16px;
-    color: white;
+    background-color: #FFF;
     display: flex;
 
 }
@@ -117,16 +122,34 @@ section div .oooo {
 
 .wel {
     padding: 70px 140px 70px 40px;
+    display: flex;
+    width: 320px;
+    height: 480px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .address {
     text-align: center;
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     margin: 120px 150px 0px 150px;
+    background-size: auto;
+    max-width: 1320px;
+    max-height: 480px;
+    border-radius: 16px;
+    color: white;
+
+}
+
+.addd {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .add {
-    padding: 80px 370px 0px 370px;
+    padding: 30px 290px 0px 290px;
     color: #070211;
     font-family: Inter;
     font-size: 32px;
@@ -139,7 +162,7 @@ section div .oooo {
 }
 
 .btn {
-    margin: 50px 550px 10px 550px;
+    margin: 50px 450px 10px 450px;
     border-radius: 8px;
     background: #F00;
     display: inline-flex;
@@ -147,6 +170,7 @@ section div .oooo {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    border: none;
 }
 
 .btn .br {
@@ -155,4 +179,258 @@ section div .oooo {
     font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
+
+}
+
+.comingsoon {
+    background-color: #FFF;
+    margin: 0 150px 0px 150px;
+    margin-top: 180px;
+    display: flex;
+    gap: 70px;
+    max-width: 1320px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.middle {
+    border-radius: 470px;
+    border: 15px solid #F00;
+    background-color: #FFF;
+}
+
+.middle1 {
+    border-radius: 370px;
+    padding: 40px;
+}
+
+.comingsoon-title {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.comm {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+
+.comingsoon-des {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.co2024 {
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.left,
+.right {
+    text-align: left;
+}
+
+.holiday {
+    margin: 120px 150px 0px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: inline-block;
+}
+
+.holi {
+
+    max-width: 1320px;
+    border-radius: 16px;
+    max-height: auto;
+}
+
+.likha {
+    text-align: center;
+    margin-bottom: 60px;
+    gap: 10px;
+}
+
+.cap {
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.hol {
+    color: #F00;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+
+}
+
+.holl {
+    color: #070211;
+}
+
+.holcap {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 0px 100px;
+}
+
+.pic {
+    background-color: #FFF;
+    background: url('../img/Rectangle 2.png'), url('../img/Rectangle 1.png');
+    background-repeat: no-repeat;
+    background-position: center bottom, right top;
+    background-size: auto;
+    max-width: 1320px;
+    border-radius: 16px;
+    max-height: 700px;
+    color: white;
+    display: flex;
+    gap: 30px;
+}
+
+.img1 {
+
+    max-height: 600px;
+    max-width: 1000px;
+    margin-right: 0px;
+}
+
+.img2 {
+    max-width: 210px;
+    max-height: 210px;
+    margin-top: 50%;
+    margin-left: -100%;
+    margin-right: 100px;
+}
+
+.gifts {
+    margin: 120px 150px 0px 150px;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+    max-width: 1320px;
+}
+
+.giftcaption {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.gifttitle {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+}
+
+.giftcap {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    margin-bottom: 50px;
+    font-weight: 400;
+}
+
+.first,
+.second {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.im {
+    max-width: 370px;
+    border-radius: 16px;
+}
+
+a:hover {
+    box-shadow: 0px 10px 10px 0px lightslategray;
+    border-radius: 10px;
+    background-color: lightslategray;
+}
+
+a {
+    text-decoration: none;
+}
+
+.subscribe {
+    max-width: 1320px;
+    margin: 120px 150px 0px 150px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+}
+
+.subimg {
+    margin-top: 80px;
+    margin-bottom: 40px;
+}
+
+.subtitle {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+}
+
+.subdes {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 200px 50px 200px;
+}
+
+
+.tog {
+    display: flex;
+    
+}
+
+.from {
+    padding: 25px 300px 25px 30px;
+    color: rgba(7, 2, 17, 0.30);
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    border-radius: 50px 0px 0px 50px;
+    border: none;
+    margin: 0px 0px 80px 250px;
+}
+
+.btn-pri {
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0px 250px 80px 0px;
+    text-transform: capitalize;
+    padding: 24px 50px;
+    border: none;
 }
